--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ about: 'about.html'
                     <img src="{{ page.logo }}" alt="Blog Logo" />
                 </a>
             {% endif %}
-        <a class="subscribe-button" href="{{ site.baseurl }}{{ site.about }}">About</a>
-<!--    <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a> -->
+        {% if page.about %} <a class="back-button" href="{{ site.baseurl }}{{ page.about }}"> About </a> {% endif %}
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
